--- a/app/src/main/res/layout/activity_functional_main.xml
+++ b/app/src/main/res/layout/activity_functional_main.xml
@@ -32,8 +32,8 @@
                 android:onClick="myProfile"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="#604A7B"
-                android:layout_margin="3dp"
+                android:background="@drawable/myprofile_button"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
@@ -47,8 +47,8 @@
                 android:onClick="aboutIPresence"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="#143153"
-                android:layout_margin="3dp"
+                android:background="@drawable/about_button"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
@@ -70,9 +70,9 @@
                 android:onClick="smartScan"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="#E46C0A"
+                android:background="@drawable/smartscan_button"
                 android:text="Smart Scan"
-                android:layout_margin="3dp"
+                android:layout_margin="2dp"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:id="@+id/smartScanButton"
@@ -94,8 +94,8 @@
                 android:onClick="viewReport"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="#1C5EBB"
-                android:layout_margin="3dp"
+                android:background="@drawable/view_report_button"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
@@ -109,8 +109,8 @@
                 android:onClick="contactUs"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="#009856"
-                android:layout_margin="3dp"
+                android:background="@drawable/contact_button"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
