--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -195,14 +195,26 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID : "
+        android:text="ID "
         android:id="@+id/idLableTV"
         android:layout_below="@+id/seperateDateMMTV"
         />
+
+    <TextView
+
+        android:layout_toEndOf="@+id/userNameLableTV"
+        android:textSize="19sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" : "
+        android:id="@+id/idColonTV"
+        android:layout_alignTop="@+id/idLableTV"
+        android:layout_toRightOf="@+id/userNameLableTV" />
 
     <TextView
         android:layout_marginTop="10dp"
@@ -212,7 +224,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/idValueTV"
-        android:layout_toRightOf="@+id/idLableTV"
+        android:layout_toRightOf="@+id/idColonTV"
         android:layout_below="@+id/seperateDateMMTV"
         />
 
@@ -220,25 +232,37 @@
         android:layout_marginTop="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="0dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name : "
+        android:text="Name"
         android:id="@+id/userNameLableTV"
         android:layout_below="@+id/idLableTV"
         />
 
     <TextView
+
+        android:layout_toEndOf="@+id/userNameLableTV"
+        android:textSize="19sp"
+        android:textColor="#ffffff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=" : "
+        android:id="@+id/userNameColonTV"
+        android:layout_alignTop="@+id/userNameLableTV"
+        android:layout_toRightOf="@+id/userNameLableTV" />
+
+    <TextView
         android:layout_marginTop="10dp"
-        android:textSize="22sp"
+        android:textSize="19sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:id="@+id/userNameValueTV"
-        android:layout_toRightOf="@+id/userNameLableTV"
-        android:layout_toEndOf="@+id/userNameLableTV"
+        android:layout_toRightOf="@+id/userNameColonTV"
+        android:layout_toEndOf="@+id/userNameColonTV"
         android:layout_below="@+id/idLableTV"
         />
 
@@ -273,7 +297,7 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#89AC3F"
+        android:background="@drawable/in_time_button"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -288,7 +312,7 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#A02E2B"
+        android:background="@drawable/out_time_button"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
