--- a/app/src/main/res/menu/scan_card_batch.xml
+++ b/app/src/main/res/menu/scan_card_batch.xml
@@ -1,4 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity" >
+
+    <item android:id="@+id/logout"
+        android:title=""
+        android:showAsAction="always"
+        />
+
 </menu>
