--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#736F64"
+    android:background="#353639"
     tools:context="com.vaiotech.attendaceapp.ScanCardBatchActivity">
 
 
