--- a/app/src/main/res/menu/menu_functional_main.xml
+++ b/app/src/main/res/menu/menu_functional_main.xml
@@ -1,4 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:yourapp="http://schemas.android.com/apk/res-auto"
     tools:context="com.vaiotech.attendaceapp.FunctionalMainActivity">
+
+        <item android:id="@+id/logout"
+            android:title=""
+            android:showAsAction="always"
+         />
 </menu>
