--- a/app/src/main/res/layout/activity_contact_us.xml
+++ b/app/src/main/res/layout/activity_contact_us.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:id="@+id/emailLinear"
         android:padding="5dp"
-        android:layout_margin="5dp"
+        android:layout_margin="10dp"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -30,7 +30,7 @@
         <EditText
             android:padding="5dp"
             android:background="#FFFFFF"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="19sp"
             android:layout_marginLeft="5dp"
             android:layout_width="fill_parent"
@@ -42,7 +42,7 @@
 
         <TextView
             android:padding="5dp"
-            android:layout_margin="5dp"
+            android:layout_margin="10dp"
             android:layout_below="@+id/emailLinear"
             android:textColor="#FFFFFF"
             android:layout_width="wrap_content"
@@ -53,20 +53,23 @@
         />
 
         <EditText
+            android:gravity="left|start"
             android:id="@+id/detailsET"
             android:layout_below="@+id/detailsTV"
             android:padding="5dp"
             android:background="#FFFFFF"
-            android:textColor="#FFFFFF"
+            android:textColor="#000000"
             android:textSize="19sp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_above="@+id/submitButton"
             android:layout_marginBottom="10dp"
+            android:text=""
         />
         <Button
+            android:textSize="19sp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/view_absentee_button"
             android:layout_marginLeft="40dp"
