--- a/app/src/main/res/layout/activity_scan_card_batch.xml
+++ b/app/src/main/res/layout/activity_scan_card_batch.xml
@@ -234,6 +234,16 @@
         android:layout_centerHorizontal="true"
         />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:background="@xml/progress_bar"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
 
     <View
         android:layout_above="@+id/inBUTTON"
