--- a/app/src/main/res/layout/activity_scan_qrcode_single.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_single.xml
@@ -266,6 +266,16 @@
         android:layout_below="@+id/idLableTV"
         />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:background="@xml/progress_bar"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        />
 
     <View
         android:layout_above="@+id/getInfoBUTTON"
