--- a/app/src/main/res/layout/activity_view_report.xml
+++ b/app/src/main/res/layout/activity_view_report.xml
@@ -116,6 +116,18 @@
             android:onClick="sendMessage"
             />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:background="@xml/progress_bar"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+    />
+
     <View
         android:layout_marginTop="20dp"
         android:layout_marginLeft="10dp"
