--- a/app/src/main/res/layout/activity_scan_qrcode_batch.xml
+++ b/app/src/main/res/layout/activity_scan_qrcode_batch.xml
@@ -244,7 +244,7 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#89AC3F"
+        android:background="@drawable/in_time_button"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -259,7 +259,7 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#A02E2B"
+        android:background="@drawable/out_time_button"
         android:width="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
