--- a/app/src/main/res/layout/activity_qrcode_generator.xml
+++ b/app/src/main/res/layout/activity_qrcode_generator.xml
@@ -8,6 +8,7 @@
     tools:context="com.vaiotech.attendaceapp.QRCodeGeneratorActivity">
 
     <TextView
+        android:layout_marginTop="10dp"
         android:textSize="30sp"
         android:textColor="#ffffff"
         android:layout_width="wrap_content"
@@ -19,7 +20,8 @@
         android:layout_marginRight="15dp"
         />
 
-    <EditText
+    <TextView
+        android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -36,6 +38,7 @@
         />
 
     <TextView
+        android:layout_marginTop="10dp"
         android:textSize="30sp"
         android:textColor="#080807"
         android:layout_marginLeft="5dp"
@@ -48,7 +51,8 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
+        android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
         android:textSize="30sp"
@@ -77,7 +81,7 @@
         android:layout_marginRight="15dp"
         />
 
-    <EditText
+    <TextView
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -108,7 +112,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -139,7 +143,7 @@
         android:layout_toRightOf="@+id/MMET"
         android:textStyle="bold" />
 
-    <EditText
+    <TextView
         android:layout_marginTop="10dp"
         android:inputType="number"
         android:textStyle="bold"
@@ -162,7 +166,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/qrCodeimageView"
-        android:layout_above="@+id/generateQrCodeButton"
+        android:layout_above="@+id/refreshButton"
         />
 
     <Button
@@ -173,9 +177,9 @@
         android:width="100dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Out Time"
-        android:onClick="save"
-        android:id="@+id/generateQrCodeButton"
+        android:text="Refresh"
+        android:onClick="refresh"
+        android:id="@+id/refreshButton"
         android:layout_alignParentBottom="true"
      />
 </RelativeLayout>
