--- a/app/src/main/res/layout/activity_functional_main.xml
+++ b/app/src/main/res/layout/activity_functional_main.xml
@@ -47,12 +47,12 @@
                 android:onClick="aboutIPresence"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="@drawable/about_button"
+                android:background="@drawable/apptheme_btn_about_holo_light"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
                 android:layout_height="fill_parent"
-                android:text="About iPresence"
+                android:text="iPresence"
                 android:id="@+id/aboutiPresenceButton" />
         </LinearLayout>
 
@@ -70,7 +70,7 @@
                 android:onClick="smartScan"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="@drawable/smartscan_button"
+                android:background="@drawable/apptheme_btn_scan_holo_light"
                 android:text="Smart Scan"
                 android:layout_margin="2dp"
                 android:layout_width="fill_parent"
@@ -94,7 +94,7 @@
                 android:onClick="viewReport"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="@drawable/view_report_button"
+                android:background="@drawable/apptheme_btn_report_holo_light"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
@@ -109,7 +109,7 @@
                 android:onClick="contactUs"
                 android:textSize="20sp"
                 android:textColor="#DCE0E5"
-                android:background="@drawable/contact_button"
+                android:background="@drawable/apptheme_btn_contact_holo_light"
                 android:layout_margin="2dp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
