--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,7 +97,7 @@
                                     android:layout_weight="1"
                                     android:textSize="20sp"
                                     android:textColor="#FFF5EC"
-                                    android:background="@drawable/button_border"
+                                    android:background="@drawable/apptheme_btn_scan_selection_holo_light"
                                     android:onClick="scanQRCode"
                                     android:id="@+id/button1"
                                     android:layout_width="match_parent"
@@ -114,7 +114,7 @@
                                    android:layout_weight="1"
                                    android:textSize="20sp"
                                    android:textColor="#FFF5EC"
-                                    android:background="@drawable/button_border"
+                                    android:background="@drawable/apptheme_btn_scan_selection_holo_light"
                                    android:onClick="scanCard"
                                    android:id="@+id/button2"
                                    android:layout_width="match_parent"
@@ -131,7 +131,7 @@
                                 android:layout_weight="1"
                                 android:textSize="20sp"
                                 android:textColor="#FFF5EC"
-                                android:background="@drawable/button_border"
+                                android:background="@drawable/apptheme_btn_scan_selection_holo_light"
                                 android:onClick="scanVoice"
                                 android:id="@+id/button3"
                                 android:layout_width="match_parent"
@@ -148,7 +148,7 @@
                                android:layout_weight="1"
                                android:textSize="20sp"
                                android:textColor="#FFF5EC"
-                               android:background="@drawable/button_border"
+                               android:background="@drawable/apptheme_btn_scan_selection_holo_light"
                                android:onClick="manualEntry"
                                android:id="@+id/button4"
                                android:layout_width="match_parent"
