--- a/app/src/main/res/layout/activity_user_main.xml
+++ b/app/src/main/res/layout/activity_user_main.xml
@@ -53,7 +53,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#FFF5EC"
-            android:background="@drawable/button_border"
+            android:background="@drawable/apptheme_btn_scan_selection_holo_light"
             android:onClick="qrScan"
             android:id="@+id/button1"
             android:layout_width="match_parent"
@@ -71,7 +71,7 @@
             android:layout_weight="1"
             android:textSize="20sp"
             android:textColor="#FFF5EC"
-            android:background="@drawable/button_border"
+            android:background="@drawable/apptheme_btn_scan_selection_holo_light"
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
