--- a/app/src/main/res/layout/activity_manual_entry.xml
+++ b/app/src/main/res/layout/activity_manual_entry.xml
@@ -315,8 +315,8 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#89AC3F"
-        android:width="100dp"
+        android:background="@drawable/apptheme_btn_in_time_holo_light"
+        android:width="110dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="In Time"
@@ -330,8 +330,8 @@
         android:layout_margin="20dp"
         android:textSize="20sp"
         android:textColor="#ffffff"
-        android:background="#A02E2B"
-        android:width="100dp"
+        android:background="@drawable/apptheme_btn_out_time_holo_light"
+        android:width="110dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Out Time"
